--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
 	<meta charset="utf8">
 </head>
 <body>
+	<script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 	<script src="script.js"></script>
-	<script src="class.js"></script>
-	<script src="predator.js"></script>
-	<script src="grass.js"></script>
-	<script src="grasseater.js"></script>
-	<script src="stone.js"></script>
-	<script src="virus.js"></script>
-	<script src="antivirus.js"></script>
 </body>
 </html>	
